--- a/index1.html
+++ b/index1.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 		<title>About-Me</title>
-		<link rel="stylesheet" type="text/css" href="Styles/main.css" >	
+		<link rel="stylesheet" type="text/css" href="main.css" >	
 	</head>
 	<body>
 		<h1 class="header">About the Greatest</h1>
@@ -19,7 +19,7 @@
 		
 			<p id="p2">At Tucker High School I am apart of the Tucker Ambush of Sound, which is our marching band. I play the trumpet in the band. We call ourselves the Royal Trumpet Mafia(R.T.M.). I also play the flugelhorn separately from the band. Outside of school, I partake in Boy Scouts. I am a Star Scout on my way to becoming a Life Scout and eventually become an Eagle Scout. In my free time, I like to play video games or hang out with my friends. Some of my favorite games to play are NBA2k, Kingdom Hearts, and Naruto Storm 4. I love to travel with my mom. Some places I have been to are New York, Jamaica, and Florida.</p>
 			
-			<img src= "images/IMG-1042.JPG" class="pic">
+			<img src= "IMG-1042.JPG" class="pic">
 		</div>
 	</body>
 </html>
