--- a/index.html
+++ b/index.html
@@ -1,16 +1,15 @@
-index.html
 <!DOCTYPE html>
 <html>
 	<head>
 		<title>Home</title>
-		<link rel="stylesheet" type="text/css" href="Styles/main.css" >		
+		<link rel="stylesheet" type="text/css" href="main.css" >		
 	</head>
 	<body>
 		<h1 class="header"> The Life of Brandon Lawrence</h1>
 		
 		<nav>
 			<a href="index.html" class="link">Home</a>
-			<a href="about-me.html" class="link">About-Me</a>
+			<a href="index1.html" class="link">About-Me</a>
 			<a href="projects.html" class="link">Projects</a>
 			<a href="contacts.html" class="link">Contacts</a>
 		</nav>
