--- a/contacts.html
+++ b/contacts.html
@@ -3,14 +3,14 @@ Contacts.html
 <html>
 	<head>
 		<title>Contacts</title>
-		<link rel="stylesheet" type="text/css" href="Styles/main.css" >
+		<link rel="stylesheet" type="text/css" href="main.css" >
 	</head>
 	<body>
 		<h1 class="header">Contacts</h1>
 
 	<nav>
 			<a href="index.html" class="link">Home</a>
-			<a href="about-me.html" class="link">About-Me</a>
+			<a href="index1.html" class="link">About-Me</a>
 			<a href="projects.html" class="link">Projects</a>
 			<a href="contacts.html" class="link">Contacts</a>
 	</nav>	
