--- a/index1.html
+++ b/index1.html
@@ -8,7 +8,7 @@
 		<h1 class="header">About the Greatest</h1>
 		<nav>
 			<a href="index.html" class="link">Home</a>
-			<a href="about-me.html" class="link">About-Me</a>
+			<a href="index1.html" class="link">About-Me</a>
 			<a href="projects.html" class="link">Projects</a>
 			<a href="contacts.html" class="link">Contacts</a>
 		</nav>
