--- a/projects.html
+++ b/projects.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title>Projects</title>
-	<link rel="stylesheet" type="text/css" href="Styles/main.css">
+	<link rel="stylesheet" type="text/css" href="main.css">
 </head>
 <body style="background-image: linear-gradient(black,black,blue,black);height: 96.45vh">
 	<h1 class="header">Projects</h1>
