--- a/projects.html
+++ b/projects.html
@@ -9,7 +9,7 @@
 		
 		<nav>
 			<a href="index.html" class="link">Home</a>
-			<a href="about-me.html" class="link">About-Me</a>
+			<a href="index1.html" class="link">About-Me</a>
 			<a href="projects.html" class="link">Projects</a>
 			<a href="contacts.html" class="link">Contacts</a>
 		</nav>
